# lofigirl-terminal

./: .env.example  .eslintrc.json  .flake8  .gitignore  .npmignore  .pre-commit-config.yaml  CLAUDE.md  COMPLETE-MIGRATION-REPORT.md  CONTRIBUTING.md  FINAL_SUMMARY.md  INSTALLATION.md  LICENSE  MIGRATION.md  MIGRATION_SUMMARY.md  Makefile  PYTHON-ARCHIVED.md  QUICKSTART-NODE.md  README-NODE.md  README.md  install-node.ps1  install-node.sh  install.ps1  install.sh  package-lock.json  package.json  pyproject.toml  setup.py  uninstall.sh
.github/workflows/: ci.yml
docs/: WINDOWS_INSTALL.md  WINDOWS_WORKFLOW.md  WORKFLOW_WINDOWS.md
requirements/: base.txt  dev.txt  prod.txt
src/: cli.ts  config.ts  index.ts  logger.ts  startup.ts  test-winston.ts  types.ts
src/lofigirl_terminal/: __init__.py  config.py  logger.py  main.py  setup.py  tui.py  tui_rice.py
src/lofigirl_terminal/modules/: __init__.py  ascii_art.py  player.py  player_mpv.py  stations.py  themes.py  youtube_fetcher.py
src/modules/: player.ts  stations.ts  tui.ts  youtube-scanner.ts
src/utils/: dependencies.ts
tests/: __init__.py  test_config.py  test_player.py  test_stations.py
